--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
+      - name: Prepare Panda Css
+        run: npm run prepare
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         
