--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
       - name: Prepare Panda Css
-        run: npm run prepare
+        run: npm install && npm run prepare
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         
