--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": "/Users/yuuki/Documents/repos/ymuw-blog",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
