スタイルの修正

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "prepare": "panda codegen",
-    "dev": "astro dev",
+    "dev": "astro dev  --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
