--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "react-dom": "^18.3.1",
     "remark-breaks": "^4.0.0",
     "remark-flexible-code-titles": "^1.2.0",
-    "typescript": "^5.5.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@astrojs/partytown": "^2.1.3",
     "@pandacss/dev": "^0.45.1",
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "typescript": "~5.7.2"
   }
 }
